[gd_scene load_steps=5 format=2]

[ext_resource path="res://modulos/admob/admob.gd" type="Script" id=1]
[ext_resource path="res://scenes/ADS.gd" type="Script" id=2]
[ext_resource path="res://ressources/coronga_1.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "rodar"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.156863, 0.188235, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect"]
position = Vector2( 159, 88 )
rotation = 2.2241
texture = ExtResource( 3 )

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 1 )
is_real = true
banner_id = "ca-app-pub-3940256099942544/6300978111"
interstitial_id = "ca-app-pub-6870929226146274/8853631972"
rewarded_id = "ca-app-pub-3940256099942544/5224354917"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "rodar"
anims/rodar = SubResource( 1 )
[connection signal="interstitial_closed" from="AdMob" to="." method="_on_AdMob_interstitial_closed"]
[connection signal="interstitial_failed_to_load" from="AdMob" to="." method="_on_AdMob_interstitial_failed_to_load"]
[connection signal="interstitial_loaded" from="AdMob" to="." method="_on_AdMob_interstitial_loaded"]
